force-app/main/default/objects/DispatchInstruction__c/DispatchInstruction__c.object-meta.xml
<CustomObject>
    <label>Instructions</label>
    <nameField>
        <displayFormat>I- {00000000}</displayFormat>
        <label>Unique ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Instructions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>