force-app/main/default/objects/DispatchInstruction__c/fields/Assigned_Field_Resource__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Field_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Field Resource</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Instructions</relationshipName>
    <type>Lookup</type>
</CustomField>