force-app/main/default/objects/DispatchInstruction__c/fields/CreatedByUserName__c.field-meta.xml
<CustomField>
    <fullName>CreatedByUserName__c</fullName>
    <formula>CreatedBy.Username</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CreatedByUserName</label>
    <type>Text</type>
</CustomField>