force-app/main/default/objects/DispatchInstruction__c/fields/CreatedFromDelta__c.field-meta.xml
<CustomField>
    <fullName>CreatedFromDelta__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CreatedFromDelta</label>
    <type>Checkbox</type>
</CustomField>