force-app/main/default/objects/DispatchInstruction__c/fields/Instruction_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Instruction_Identifier__c</fullName>
    <label>Instruction Identifier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Override Service Provider Reason</fullName>
            </value>
            <value>
                <fullName>Cancellation Comments</fullName>
            </value>
            <value>
                <fullName>Accidental Damage Reason</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>