force-app/main/default/objects/DispatchInstruction__c/fields/Mode_of_Creation__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Creation__c</fullName>
    <label>Mode of Creation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automatic</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>