force-app/main/default/objects/DispatchInstruction__c/fields/Receiver__c.field-meta.xml
<CustomField>
    <fullName>Receiver__c</fullName>
    <label>Receiver</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Serial Number</fullName>
            </value>
            <value>
                <fullName>All Providers</fullName>
            </value>
            <value>
                <fullName>Logistics Provider</fullName>
            </value>
            <value>
                <fullName>Service Provider</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>DELL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>