force-app/main/default/objects/DispatchInstruction__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
            <value>
                <fullName>Labor Only</fullName>
            </value>
            <value>
                <fullName>Parts and Labor</fullName>
            </value>
            <value>
                <fullName>Parts Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>