force-app/main/default/objects/DispatchInstruction__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <defaultValue>&quot;DELLEMC&quot;</defaultValue>
    <label>Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>