force-app/main/default/objects/DispatchInstruction__c/fields/SpecialInstructions__c.field-meta.xml
<CustomField>
    <fullName>SpecialInstructions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SpecialInstructions</label>
    <type>Checkbox</type>
</CustomField>