force-app/main/default/objects/DispatchInstruction__c/fields/Type_of_Instruction__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Instruction__c</fullName>
    <label>Type of Instruction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>