force-app/main/default/objects/DispatchInstruction__c/fields/Vendor_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Instructions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send To Vendor</label>
    <type>Checkbox</type>
</CustomField>