force-app/main/default/objects/DispatchInstruction__c/fields/Visibility__c.field-meta.xml
<CustomField>
    <fullName>Visibility__c</fullName>
    <label>Visibility</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal (Private)</fullName>
                <default>true</default>
                <label>Internal (Private)</label>
            </value>
            <value>
                <fullName>External (Public)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>