force-app/main/default/objects/DispatchInstruction__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <label>Work Order</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Instructions</relationshipLabel>
    <relationshipName>Instructions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>